--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shelf_static: ^1.1.1
+  shelf: ^1.4.0
+  camera: ^0.10.3+1
+  camera_web: ^0.3.1+2
+  video_player: ^2.5.2
+  file_saver: ^0.1.1
+  jsaver: ^1.2.0
+  video_player_web: ^2.0.14
+  http_interceptor: ^1.0.2
+  dio: ^5.0.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
